# ValorBG

./: .eslintignore  .eslintrc  README.md  index.html  package-lock.json  package.json  splashscreen.html  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
.hygen/new/hook/: hook.ts.ejs.t
.hygen/new/page/: index.js  index.ts.ejs.t  page.module.scss.ejs.t  page.tsx.ejs.t
.hygen/new/ui/: component.tsx.ejs.t  index.js
.hygen/new/util/: util.ts.ejs.t
public/locales/en/: translation.json
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/common/animations/: opacity.ts
src/common/utils/: createTrayIcon.ts  formatError.ts  initLocalization.ts  isProcessRunning.ts
src/components/Titlebar/: Titlebar.module.scss  Titlebar.tsx
src/components/UI/BasicPage/: BasicPage.module.scss  BasicPage.tsx
src/components/UI/Button/: Button.module.scss  Button.tsx
src/components/UI/Input/: Input.module.scss  Input.tsx
src/hooks/: useInput.ts  useOutsideClick.ts
src/pages/common/error/: ErrorPage.module.scss  ErrorPage.tsx
src/pages/common/notFound/: NotFoundPage.module.scss  NotFoundPage.tsx
src/pages/home/: HomePage.module.scss  HomePage.tsx  index.ts
src/pages/settings/: SettingsPage.module.scss  SettingsPage.tsx  index.ts
src/services/: CustomBackgroundService.ts
src/store/: configStore.ts  customBackgroundsStore.ts
